added position .caption
section what-we-do

--- a/css/styles.css
+++ b/css/styles.css
@@ -326,7 +326,16 @@ address {
   letter-spacing: 0.03em;
 }
 
+.product {
+  position: relative;
+}
+
 .caption {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
